--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "framer-motion": "^12.12.2",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
